2016-09-29 09:03 - Alexandre - Adicionei os arquivos no Google Drive
2016-09-29 18:24 - Alexandre - Implementada a classe Jogador
2016-09-29 19:40 - Alexandre - Criado a tela de boas vindas, inicializacao de jogadores e distribuicao de cartas
//Revision 2
2016-10-03 17:24 - Alexandre - Removido ID de jogadores e cartas (nao utizilado)
//Revision 3
Corrigido bug nas cartas (Pife nao possui valete). Construtor corrigido.
Criada nova classe: Interface. Implementa os metodos para imprimir a interface.
//Revision 4
Corrigido bug na inicializacao das cartas (faltava inicializar o ArrayList da mao de cartas) do jogador
//Revision 5
Jogador:
String nome alterada para final
Mao de cartas do jogador alterado para private
Implementados metodos para acesso a mao de cartas do jogador
Interface:
Implementados metodos de impressao da Interface
Carta:
Adidionado integer para identificar o naipe da carta
Main:
Programa principal implementado
TO-DO:
Verificar as entradas do usuario para evitar conflitos
Implementar as condicoes de vitoria
Implementar interface de vitoria
Implementar verificacao de turno (cada jogador so pode descartar/comprar uma vez por turno)
//Revision 6
Interface:
Implementado metodo para limpar o console
Aprimoramentos na interface
Programa principal:
Implementado a verificacao de turno
Implementada a verificacao de entrada
Geral:
Correcao de bugs