@@ -17,8 +17,6 @@ public class Interface
     public static void imprimirSessao8(Jogador jogador)
     {
         //
-        System.out.flush();
-        //
         List<String> naipes = new ArrayList<>();
         List<String> numeros = new ArrayList<>();
         
@@ -33,7 +31,7 @@ public class Interface
             else if(jogador.retornarCarta(i).numero() == 12)
                 numeros.add("K");
             else
-                System.out.println("ERRO FATAL");
+                System.out.println("!!! ERRO: INICIALIZACAO DE CARTAS: NUMERO INVALIDO !!!");
             
             switch (jogador.retornarCarta(i).naipe()) 
             {
@@ -54,7 +52,7 @@ public class Interface
             }
             
         }
-        System.out.println("***********VOCE DEVE COMPRAR UMA CARTA***********");
+        System.out.println("******** VOCE DEVE COMPRAR UMA CARTA ********");
         System.out.println("--------------SUAS CARTAS------------------");
         System.out.println(" ___ ___ ___ ___ ___ ___ ___ ___ __________");
         System.out.println("|"+numeros.get(0)+"  |"+numeros.get(1)+"  |"+numeros.get(2)+"  |"+numeros.get(3)+"  |"+numeros.get(4)+"  |"+numeros.get(5)+"  |"+numeros.get(6)+"  |"+numeros.get(7)+"  |"+"?"+"        |");
@@ -67,14 +65,12 @@ public class Interface
         System.out.println("  1   2   3   4   5   6   7   8    9");
         System.out.println("Copas: # | Espadas: @ | Ouros: O | Paus: +");
         System.out.println("");
-        System.out.println("PRESSIONE L PARA COMPRAR DO LIXO");
-        System.out.println("PRESSIONE M PARA COMPRAR DO MONTE");
+        System.out.println("->PRESSIONE L PARA COMPRAR DO LIXO");
+        System.out.println("->PRESSIONE M PARA COMPRAR DO MONTE");
     }
     
     public static void imprimirSessao9(Jogador jogador)
     {
-        //
-        System.out.flush();
         //
         List<String> naipes = new ArrayList<>();
         List<String> numeros = new ArrayList<>();
@@ -111,7 +107,7 @@ public class Interface
             }
             
         }
-        System.out.println("***********TURNO: "+ jogador.nome()+"***********");
+        System.out.println("******** TURNO: "+ jogador.nome()+" ********");
         System.out.println("--------------SUAS CARTAS------------------");
         System.out.println(" ___ ___ ___ ___ ___ ___ ___ ___ __________");
         System.out.println("|"+numeros.get(0)+"  |"+numeros.get(1)+"  |"+numeros.get(2)+"  |"+numeros.get(3)+"  |"+numeros.get(4)+"  |"+numeros.get(5)+"  |"+numeros.get(6)+"  |"+numeros.get(7)+"  |"+numeros.get(8)+"        |");
@@ -124,15 +120,56 @@ public class Interface
         System.out.println("  1   2   3   4   5   6   7   8    9");
         System.out.println("Copas: # | Espadas: @ | Ouros: O | Paus: +");
         System.out.println("");
-        System.out.println("PRESSIONE D PARA DESCARTAR UMA CARTA");
-        System.out.println("PRESSIONE B PARA BATER");
-        System.out.println("PRESSIONE P PARA PASSAR O TURNO");
+        System.out.println("-> PRESSIONE D PARA DESCARTAR UMA CARTA");
+        System.out.println("-> PRESSIONE B PARA BATER");
+        System.out.println("-> PRESSIONE P PARA PASSAR O TURNO");
     }
     
+    //"LIMPA" O CONSOLE
     public static void skip()
     {
         System.out.println("\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n");
     }
     
+    //IMPRIME MENSAGEM DE COMPRA
+    public static void compra()
+    {
+        System.out.println("--Carta comprada!--");
+    }
+    
+    //IMPRIME MENSAGEM DE DESCARTE
+    public static void descarte()
+    {
+        System.out.println("--Carta descartada!--");
+    }
+    
+    //IMPRIME MENSAGEM DE SELECAO DE DESCARTE
+    public static void selecaoDescarte()
+    {
+        System.out.println("-> Digite o numero da carta que deseja descartar (apenas numeros)");
+    }
+    
+    //IMPRIME MENSAGEM DE FIM DE TURNO
+    public static void fimTurno()
+    {
+        System.out.println("--Turno finalizado!--");
+    }
+    
+    //MENSAGEM DE NUMERO DE CARTAS PARA BATER
+    public static void quantidadePife()
+    {
+        System.out.println("-> Insira a quantidade de cartas que deseja bater (3 ou 4) (Apenas numeros!)");
+    }
+    
+    //IMPRIME MENSAGEM DE SELECAO DE BATIDA
+    public static void selecaoPife()
+    {
+        System.out.println("-> Digite os numero das carta que deseja bater (apenas numeros)");
+    }
+    
+    public static void selecaoCarta()
+    {
+        System.out.println("-> Digite o numero da carta(apenas numeros)");
+    }
     
 }
